@@ -6,10 +6,12 @@ import com.cosmate.dto.request.UpdateProfileRequest;
 import com.cosmate.dto.request.GoogleTokenRequest;
 import com.cosmate.dto.response.UserListItem;
 import com.cosmate.entity.Role;
+import com.cosmate.entity.RoleEntity;
 import com.cosmate.entity.User;
 import com.cosmate.exception.AppException;
 import com.cosmate.exception.ErrorCode;
 import com.cosmate.repository.UserRepository;
+import com.cosmate.repository.RoleRepository;
 import com.cosmate.security.JwtUtils;
 import com.cosmate.service.UserService;
 import com.cosmate.service.FirebaseStorageService;
@@ -28,15 +30,11 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.time.LocalDateTime;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.io.InputStreamReader;
@@ -50,6 +48,7 @@ public class UserServiceImpl implements UserService {
     private static final Logger logger = LoggerFactory.getLogger(UserServiceImpl.class);
 
     private final UserRepository userRepository;
+    private final RoleRepository roleRepository;
     private final JwtUtils jwtUtils;
     private final FirebaseStorageService firebaseStorageService;
     private final WalletService walletService;
@@ -73,77 +72,58 @@ public class UserServiceImpl implements UserService {
         }
 
         // Determine desired role (default to COSPLAYER)
-        Role desiredRole = Role.COSPLAYER;
+        String desiredRoleName = Role.COSPLAYER.name();
         if (request.getRole() != null && !request.getRole().isBlank()) {
             try {
-                desiredRole = Role.valueOf(request.getRole().trim().toUpperCase(Locale.ROOT));
+                desiredRoleName = request.getRole().trim().toUpperCase(Locale.ROOT);
+                Role.valueOf(desiredRoleName); // validate
             } catch (IllegalArgumentException e) {
                 throw new AppException(ErrorCode.INVALID_KEY);
             }
         }
 
-        // Log current Authentication for debugging authorization issues
-        Authentication currentAuth = SecurityContextHolder.getContext().getAuthentication();
-        if (currentAuth == null) {
-            logger.debug("register: no Authentication in SecurityContext");
-        } else {
-            logger.debug("register: authentication present principal={} authenticated={} authorities={}",
-                    currentAuth.getPrincipal(), currentAuth.isAuthenticated(), currentAuth.getAuthorities());
-        }
-
-        logger.debug("register: desiredRole={}", desiredRole);
-
-        // Authorization rules:
-        // - PROVIDER: open registration (no authenticated admin needed)
-        // - COSPLAYER: open registration
-        // - ADMIN: only an authenticated user with ROLE_SUPERADMIN can create ADMIN accounts
-        // - STAFF: only an authenticated user with ROLE_ADMIN or ROLE_SUPERADMIN can create STAFF accounts
-        if (desiredRole == Role.ADMIN || desiredRole == Role.STAFF) {
+        // Authorization checks for ADMIN/STAFF creation
+        if ("ADMIN".equals(desiredRoleName) || "STAFF".equals(desiredRoleName)) {
             Authentication auth = SecurityContextHolder.getContext().getAuthentication();
             boolean canCreate = false;
             if (auth != null && auth.isAuthenticated()) {
                 for (GrantedAuthority ga : auth.getAuthorities()) {
-                    if (desiredRole == Role.ADMIN) {
-                        if ("ROLE_SUPERADMIN".equals(ga.getAuthority())) {
-                            canCreate = true; break;
-                        }
+                    if ("ADMIN".equals(desiredRoleName)) {
+                        if ("ROLE_SUPERADMIN".equals(ga.getAuthority())) { canCreate = true; break; }
                     } else { // STAFF
-                        if ("ROLE_ADMIN".equals(ga.getAuthority()) || "ROLE_SUPERADMIN".equals(ga.getAuthority())) {
-                            canCreate = true; break;
-                        }
+                        if ("ROLE_ADMIN".equals(ga.getAuthority()) || "ROLE_SUPERADMIN".equals(ga.getAuthority())) { canCreate = true; break; }
                     }
                 }
             }
-            logger.debug("register: canCreate={}", canCreate);
-            if (!canCreate) {
-                throw new AppException(ErrorCode.FORBIDDEN);
-            }
+            if (!canCreate) throw new AppException(ErrorCode.FORBIDDEN);
         }
+
+        RoleEntity roleEntity = roleRepository.findByRoleName(desiredRoleName).orElseThrow(() -> new AppException(ErrorCode.INVALID_KEY));
 
         User.UserBuilder builder = User.builder()
                 .username(request.getUsername())
                 .email(request.getEmail())
                 .phone(request.getPhone())
-                .roles(new HashSet<>(Collections.singleton(desiredRole)));
+                .role(roleEntity);
 
         if (request.getFullName() != null) builder.fullName(request.getFullName());
         if (avatarUrl != null) builder.avatarUrl(avatarUrl);
 
         User user = builder.build();
 
-        // If registering via Google, skip password; for other flows, password required except when creating Admin/Staff by admin? Keep password required for all except fromGoogle
         if (!fromGoogle) {
             if (request.getPassword() == null) throw new AppException(ErrorCode.INVALID_KEY);
-            String hash = passwordEncoder.encode(request.getPassword());
-            user.setPasswordHash(hash);
+            user.setPasswordHash(passwordEncoder.encode(request.getPassword()));
         }
 
         User saved = userRepository.save(user);
-        // Automatically create wallet for COSPLAYER or PROVIDER-type roles
+
+        // create wallet for COSPLAYER or provider roles
         try {
-            if (saved.getRoles() != null) {
-                boolean createWallet = saved.getRoles().stream().anyMatch(r -> r == Role.COSPLAYER || RoleUtils.isProviderRole(r));
-                if (createWallet) {
+            if (saved.getRole() != null) {
+                Role savedEnum = null;
+                try { savedEnum = Role.valueOf(saved.getRole().getRoleName()); } catch (IllegalArgumentException ignored) {}
+                if (savedEnum != null && (savedEnum == Role.COSPLAYER || RoleUtils.isProviderRole(savedEnum))) {
                     walletService.createForUser(saved);
                 }
             }
@@ -151,14 +131,19 @@ public class UserServiceImpl implements UserService {
             logger.error("Failed to create wallet for user {}: {}", saved.getId(), e.getMessage(), e);
         }
 
-        // If the user was created with a PROVIDER-type role, create a Provider entity (fields null by default). The Providers table references Users by user_id.
+        // create provider record for provider roles
         try {
-            if (saved.getRoles() != null && saved.getRoles().stream().anyMatch(RoleUtils::isProviderRole)) {
-                providerService.createForUser(saved.getId());
+            if (saved.getRole() != null) {
+                Role savedEnum = null;
+                try { savedEnum = Role.valueOf(saved.getRole().getRoleName()); } catch (IllegalArgumentException ignored) {}
+                if (savedEnum != null && RoleUtils.isProviderRole(savedEnum)) {
+                    providerService.createForUser(saved.getId());
+                }
             }
         } catch (Exception e) {
             logger.error("Failed to create provider record for user {}: {}", saved.getId(), e.getMessage(), e);
         }
+
         return saved;
     }
 
@@ -168,28 +153,22 @@ public class UserServiceImpl implements UserService {
                 .or(() -> userRepository.findByUsername(usernameOrEmail))
                 .orElseThrow(() -> new AppException(ErrorCode.INVALID_CREDENTIALS));
 
-        // prevent banned users from logging in
-        if (user.getStatus() != null && "BANNED".equalsIgnoreCase(user.getStatus())) {
-            throw new AppException(ErrorCode.ACCOUNT_BANNED);
-        }
-
+        if (user.getStatus() != null && "BANNED".equalsIgnoreCase(user.getStatus())) throw new AppException(ErrorCode.ACCOUNT_BANNED);
         if (user.getPasswordHash() == null) throw new AppException(ErrorCode.INVALID_CREDENTIALS);
+        if (!passwordEncoder.matches(password, user.getPasswordHash())) throw new AppException(ErrorCode.INVALID_CREDENTIALS);
 
-        if (!passwordEncoder.matches(password, user.getPasswordHash())) {
-            throw new AppException(ErrorCode.INVALID_CREDENTIALS);
-        }
-
-        List<String> roles = user.getRoles().stream().map(Enum::name).collect(Collectors.toList());
-        // convert Integer id to Long to match JwtUtils.generateToken signature
+        List<String> roles = user.getRole() == null ? Collections.emptyList() : List.of(user.getRole().getRoleName());
         Long userIdLong = user.getId() == null ? null : user.getId().longValue();
 
         Long providerIdLong = null;
-        if (user.getRoles() != null && user.getRoles().stream().anyMatch(RoleUtils::isProviderRole)) {
-            try {
-                var prov = providerService.getByUserId(user.getId());
-                if (prov != null && prov.getId() != null) providerIdLong = prov.getId().longValue();
-            } catch (AppException ignored) {
-                // no provider record found - skip providerId
+        if (user.getRole() != null) {
+            Role savedEnum = null;
+            try { savedEnum = Role.valueOf(user.getRole().getRoleName()); } catch (IllegalArgumentException ignored) {}
+            if (savedEnum != null && RoleUtils.isProviderRole(savedEnum)) {
+                try {
+                    var prov = providerService.getByUserId(user.getId());
+                    if (prov != null && prov.getId() != null) providerIdLong = prov.getId().longValue();
+                } catch (AppException ignored) { }
             }
         }
 
@@ -201,37 +180,34 @@ public class UserServiceImpl implements UserService {
     public User updateProfile(Integer userId, UpdateProfileRequest request, MultipartFile avatar) {
         User user = userRepository.findById(userId).orElseThrow(() -> new AppException(ErrorCode.UNCATEGORIZED_EXCEPTION));
 
-        // username is not allowed to be changed via profile update
-
         if (request.getFullName() != null) user.setFullName(request.getFullName());
         if (request.getPhone() != null) user.setPhone(request.getPhone());
 
-        // upload avatar if provided; service handles upload and sets avatarUrl
         if (avatar != null && !avatar.isEmpty()) {
             try {
                 String filename = avatar.getOriginalFilename() == null ? "avatar" : avatar.getOriginalFilename();
                 String destination = "users/" + userId + "/avatar_" + System.currentTimeMillis() + "_" + filename;
                 String url = firebaseStorageService.uploadFile(avatar, destination);
                 user.setAvatarUrl(url);
-                // If user is a provider-type role, mirror avatar to Provider record
                 try {
-                    if (user.getRoles() != null && user.getRoles().stream().anyMatch(RoleUtils::isProviderRole)) {
-                        providerService.updateAvatarForUser(userId, url);
+                    if (user.getRole() != null) {
+                        Role savedEnum = null;
+                        try { savedEnum = Role.valueOf(user.getRole().getRoleName()); } catch (IllegalArgumentException ignored) {}
+                        if (savedEnum != null && RoleUtils.isProviderRole(savedEnum)) {
+                            providerService.updateAvatarForUser(userId, url);
+                        }
                     }
                 } catch (Exception e) {
                     logger.error("Failed to mirror avatar to provider for user {}: {}", userId, e.getMessage(), e);
                 }
             } catch (Exception e) {
-                // Log the upload failure but do not abort the whole profile update
                 logger.error("Failed to upload avatar for user {}: {}. Continuing without updating avatar.", userId, e.getMessage(), e);
-                // keep existing avatarUrl in user (no change)
             }
         }
 
         return userRepository.save(user);
     }
 
-    // New: update only avatar
     @Override
     @Transactional
     public User updateAvatar(Integer userId, MultipartFile avatar) {
@@ -242,10 +218,13 @@ public class UserServiceImpl implements UserService {
             String destination = "users/" + userId + "/avatar_" + System.currentTimeMillis() + "_" + filename;
             String url = firebaseStorageService.uploadFile(avatar, destination);
             user.setAvatarUrl(url);
-            // If user is a provider-type role, mirror avatar to Provider record
             try {
-                if (user.getRoles() != null && user.getRoles().stream().anyMatch(RoleUtils::isProviderRole)) {
-                    providerService.updateAvatarForUser(userId, url);
+                if (user.getRole() != null) {
+                    Role savedEnum = null;
+                    try { savedEnum = Role.valueOf(user.getRole().getRoleName()); } catch (IllegalArgumentException ignored) {}
+                    if (savedEnum != null && RoleUtils.isProviderRole(savedEnum)) {
+                        providerService.updateAvatarForUser(userId, url);
+                    }
                 }
             } catch (Exception e) {
                 logger.error("Failed to mirror avatar to provider for user {}: {}", userId, e.getMessage(), e);
@@ -273,9 +252,7 @@ public class UserServiceImpl implements UserService {
         boolean isAdmin = false;
         if (auth != null && auth.isAuthenticated()) {
             for (GrantedAuthority ga : auth.getAuthorities()) {
-                if ("ROLE_ADMIN".equals(ga.getAuthority()) || "ROLE_SUPERADMIN".equals(ga.getAuthority())) {
-                    isAdmin = true; break;
-                }
+                if ("ROLE_ADMIN".equals(ga.getAuthority()) || "ROLE_SUPERADMIN".equals(ga.getAuthority())) { isAdmin = true; break; }
             }
         }
         if (!isAdmin) throw new AppException(ErrorCode.FORBIDDEN);
@@ -326,9 +303,8 @@ public class UserServiceImpl implements UserService {
                 .fullName(u.getFullName())
                 .phone(u.getPhone())
                 .status(u.getStatus())
-                .roles(u.getRoles().stream().map(Enum::name).collect(Collectors.toSet()))
-                .createdAt(u.getCreatedAt())
-                .build()).collect(Collectors.toList());
+                .role(u.getRole() == null ? null : u.getRole().getRoleName())
+                .build()).toList();
     }
 
     @Override
@@ -339,20 +315,20 @@ public class UserServiceImpl implements UserService {
         if (email == null) throw new AppException(ErrorCode.INVALID_CREDENTIALS);
 
         User user = userRepository.findByEmail(email).orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
-        // check banned
-        if (user.getStatus() != null && "BANNED".equalsIgnoreCase(user.getStatus())) {
-            throw new AppException(ErrorCode.ACCOUNT_BANNED);
-        }
-        List<String> roles = user.getRoles().stream().map(Enum::name).collect(Collectors.toList());
+        if (user.getStatus() != null && "BANNED".equalsIgnoreCase(user.getStatus())) throw new AppException(ErrorCode.ACCOUNT_BANNED);
+
+        List<String> roles = user.getRole() == null ? Collections.emptyList() : List.of(user.getRole().getRoleName());
         Long userIdLong = user.getId() == null ? null : user.getId().longValue();
 
         Long providerIdLong = null;
-        if (user.getRoles() != null && user.getRoles().stream().anyMatch(RoleUtils::isProviderRole)) {
-            try {
-                var prov = providerService.getByUserId(user.getId());
-                if (prov != null && prov.getId() != null) providerIdLong = prov.getId().longValue();
-            } catch (AppException ignored) {
-                // skip
+        if (user.getRole() != null) {
+            Role savedEnum = null;
+            try { savedEnum = Role.valueOf(user.getRole().getRoleName()); } catch (IllegalArgumentException ignored) {}
+            if (savedEnum != null && RoleUtils.isProviderRole(savedEnum)) {
+                try {
+                    var prov = providerService.getByUserId(user.getId());
+                    if (prov != null && prov.getId() != null) providerIdLong = prov.getId().longValue();
+                } catch (AppException ignored) { }
             }
         }
 
@@ -373,7 +349,6 @@ public class UserServiceImpl implements UserService {
         User user;
         if (existing.isPresent()) {
             user = existing.get();
-            // update profile fields
             if (name != null) user.setFullName(name);
             if (picture != null) user.setAvatarUrl(picture);
             user = userRepository.save(user);
@@ -384,20 +359,20 @@ public class UserServiceImpl implements UserService {
             user = register(r, true, picture);
         }
 
-        if (user.getStatus() != null && "BANNED".equalsIgnoreCase(user.getStatus())) {
-            throw new AppException(ErrorCode.ACCOUNT_BANNED);
-        }
+        if (user.getStatus() != null && "BANNED".equalsIgnoreCase(user.getStatus())) throw new AppException(ErrorCode.ACCOUNT_BANNED);
 
-        List<String> roles = user.getRoles().stream().map(Enum::name).collect(Collectors.toList());
+        List<String> roles = user.getRole() == null ? Collections.emptyList() : List.of(user.getRole().getRoleName());
         Long userIdLong = user.getId() == null ? null : user.getId().longValue();
 
         Long providerIdLong = null;
-        if (user.getRoles() != null && user.getRoles().stream().anyMatch(RoleUtils::isProviderRole)) {
-            try {
-                var prov = providerService.getByUserId(user.getId());
-                if (prov != null && prov.getId() != null) providerIdLong = prov.getId().longValue();
-            } catch (AppException ignored) {
-                // skip
+        if (user.getRole() != null) {
+            Role savedEnum = null;
+            try { savedEnum = Role.valueOf(user.getRole().getRoleName()); } catch (IllegalArgumentException ignored) {}
+            if (savedEnum != null && RoleUtils.isProviderRole(savedEnum)) {
+                try {
+                    var prov = providerService.getByUserId(user.getId());
+                    if (prov != null && prov.getId() != null) providerIdLong = prov.getId().longValue();
+                } catch (AppException ignored) { }
             }
         }
 
@@ -411,11 +386,9 @@ public class UserServiceImpl implements UserService {
 
     /**
      * Verify Google id_token using Google's tokeninfo endpoint.
-     * Returns payload map if valid, otherwise null.
      */
     private Map<String, Object> verifyGoogleIdToken(String idToken) {
         try {
-            // Google's tokeninfo endpoint: https://oauth2.googleapis.com/tokeninfo?id_token=XYZ
             String urlStr = "https://oauth2.googleapis.com/tokeninfo?id_token=" + idToken;
             URL url = new URL(urlStr);
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
@@ -432,25 +405,15 @@ public class UserServiceImpl implements UserService {
                 String line;
                 while ((line = br.readLine()) != null) sb.append(line);
                 Map<String, Object> map = objectMapper.readValue(sb.toString(), Map.class);
-                // Validate aud (client_id) if configured
                 if (googleClientId != null && !googleClientId.isBlank()) {
                     Object audObj = map.get("aud");
                     String aud = audObj == null ? null : audObj.toString();
-                    if (!googleClientId.equals(aud)) {
-                        logger.debug("Google id_token aud mismatch: expected='{}' actual='{}'", googleClientId, aud);
-                        return null;
-                    }
-                } else {
-                    logger.debug("google.client-id not set; skipping aud validation");
+                    if (!googleClientId.equals(aud)) return null;
                 }
-                // Optionally validate issuer
                 Object issObj = map.get("iss");
                 if (issObj != null) {
                     String iss = issObj.toString();
-                    if (!"accounts.google.com".equals(iss) && !"https://accounts.google.com".equals(iss)) {
-                        logger.debug("Unexpected token issuer='{}'", iss);
-                        return null;
-                    }
+                    if (!"accounts.google.com".equals(iss) && !"https://accounts.google.com".equals(iss)) return null;
                 }
                 return map;
             }
